# self-evvole-ai-agents

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  skills-lock.json  task.md
data/evaluations/baseline/: scores.csv  scores.json
data/meta_evaluation/: meta_eval_20260524T055607Z.json  meta_eval_20260525T040652Z.json
data/prompt_versions/agent1/: 20260524T054650Z.json  20260524T054650Z.md
data/prompt_versions/agent2/: 20260524T055054Z.json  20260524T055054Z.md  active.txt
data/prompt_versions/agent3/: 20260524T055602Z.json  20260524T055602Z.md  active.txt
docs/: IMPLEMENTATION_PLAN.md  evolution_report.md  evolution_report_codex_preview.md
policy/: compliance_rules.json  context_budget.json  settlement_policy.json
prompts/: README.md  agent1_assessment.md  agent2_resolution_voice.md  agent3_final_notice.md
src/collections_agent/: activities.py  api.py  borrower_harness.py  compliance_checker.py  evaluator.py  llm_adapter.py  meta_evaluator.py  models.py  prompt_manager.py  run_pipeline.py  self_learning.py  starter.py  structured_outputs.py  token_counter.py  voice_generator.py  voice_session.py  worker.py  workflows.py
